# expense-agent

./: .env.example  README.md  agents-cli-manifest.yaml  architecture.md  cleanup_reference.md  deployment_metadata.json  publish.md  pyproject.toml  todo.md  tutorial.md
app/: agent.py  agent_runtime_app.py
deployment/terraform/single-project/: apis.tf
submission_frontend/: Dockerfile  main.py  pyproject.toml
